fix: 🐛 fixed navigation and footer spacings

--- a/src/components/cms/bnb-cms-info-box/styles.scss
+++ b/src/components/cms/bnb-cms-info-box/styles.scss
@@ -6,7 +6,6 @@
 	justify-content: center;
 	background-color: $purple;
 	width: 100%;
-	padding-bottom: 100px;
 
 	.list-container {
 		width: 100%;
